--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tiledimporter-kaboom-example-projec",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "This is an example project that illustrates how this plugin works.",
   "main": "dist/index.html",
   "scripts": {
@@ -8,7 +8,7 @@
     "bundle": "esbuild --bundle example/main.js --outfile=dist/app.js --minify"
   },
   "author": "ahmutkadim",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "kaboom": "^3000.1.17",
     "tiledimporter-kaboom": "^0.1.0"
